# AI_NovelGenerator

./: .gitignore  Cargo.toml  Justfile  README.md  llm_adapters.py
crates/adapters/: Cargo.toml
crates/adapters/src/: base_url.rs  embedding.rs  error.rs  lib.rs  llm.rs  retry.rs  vectorstore.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/prompts/: default.toml
crates/core/src/: embedding.rs  lib.rs  logging.rs
crates/core/src/architecture/: mod.rs
crates/core/src/blueprint/: mod.rs
crates/core/src/chapter/: finalization.rs  keywords.rs  knowledge.rs  mod.rs  prompt.rs  summary.rs  vector_store.rs
crates/core/src/config/: mod.rs
crates/core/src/prompts/: mod.rs
crates/core/src/vectorstore/: mod.rs
crates/core/tests/: workflow.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  main.rs  state.rs  tasks.rs  text_editor.rs
novel_generator/: vectorstore_utils.py
