[package]
name = "novel-adapters"
version = "0.1.0"
edition = "2021"

[lib]
name = "novel_adapters"
path = "src/lib.rs"

[dependencies]
novel-core = { path = "../core" }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
once_cell = "1"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
