[package]
name = "novel-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "novel_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"
